added styling for buttons that will increase and decrease font sizes

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         </p>
       </div>
     </div>
+    <div class="font-buttons">
+      <button class="incr-btn">A+</button>
+      <button class="decr-btn">A-</button>
+    </div>
+
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
   </body>
