--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
     </div>
 
     <!-- You can also require other files to run in this process -->
-    <script src="./renderer.js"></script>
+    <script src="./js/renderer.js"></script>
   </body>
 </html>
