styling search bar and toggle, will improve its style

--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
     <title>Hymnal</title>
   </head>
   <body>
+    <div class="top-nav">
+      <div class="search-bar">
+        <input type="text" placeholder="Search hymn" />
+      </div>
+
+      <div class="checkbox-item">
+        <label class="custom-checkbox checkbox-slide">
+          <input type="checkbox" />
+          <span class="slidemark"></span>
+          <span class="label-text">Sliding Checkmark</span>
+        </label>
+      </div>
+    </div>
     <div class="container">
       <div class="left-panel">
         <h2>Left Panel</h2>
