styling improvements on buttons and slider

--- a/index.html
+++ b/index.html
@@ -21,47 +21,79 @@
   <body>
     <div class="top-nav">
       <div class="search-bar">
-        <input type="text" placeholder="Search hymn" />
+        <input type="text" placeholder="Search hymn..." />
       </div>
 
       <div class="checkbox-item">
         <label class="custom-checkbox checkbox-slide">
           <input type="checkbox" />
           <span class="slidemark"></span>
-          <span class="label-text">Sliding Checkmark</span>
+          <span class="label-text">Dual Mode</span>
         </label>
       </div>
     </div>
     <div class="container">
       <div class="left-panel">
-        <h2>Left Panel</h2>
-        <p>This is the left side of the split layout.</p>
-        <p>You can put any english content here</p>
-        <p>The content will scroll independently if it overflows.</p>
+        <h2>English</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Amazing grace! how sweet the sound,<br />
+          That saved a wretch; like me!<br />
+          I once was lost, but now am found,<br />
+          Was blind, but now I see.
         </p>
+
         <p>
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-          nisi ut aliquip ex ea commodo consequat.
+          ’Twas grace that taught my heart to fear,<br />
+          And grace my fears relieved;<br />
+          How precious did that grace appear<br />
+          The hour I first believed!
+        </p>
+
+        <p>
+          The Lord hath promised good to me,<br />
+          His word my hope secures;<br />
+          He will my shield and portion be<br />
+          As long as life endures.
+        </p>
+
+        <p>
+          When we’ve been there ten thousand years,<br />
+          Bright shining as the sun,<br />
+          We’ve no less days to sing God’s praise<br />
+          Than when we first begun.
         </p>
       </div>
 
       <div class="divider"></div>
 
       <div class="right-panel">
-        <h2>Right Panel</h2>
-        <p>This is the right side of the split layout.</p>
-        <p>Hre will be the translated hymns</p>
-        <p>Both panels will responsive and will adapt to screen size.</p>
+        <h2>Twi</h2>
         <p>
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-          dolore eu fugiat nulla pariatur.
+          Adom anwonwade! ɛte sɛn nneɛma no,<br />
+          A gyee ɔbɔnefo; te sɛ me!<br />
+          Me yerae dada, nanso seesei wɔahu me,<br />
+          Na mennhu, nanso seesei mahu.
         </p>
+
         <p>
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-          officia deserunt mollit anim id est laborum.
+          Na adom na kyerɛɛ me koma sɛ mennsuro,<br />
+          Na adom nso yi me suro kɔe;<br />
+          Ɛyɛɛ anika sɛnea saa adom no baa<br />
+          Bere a megyinaa gyidi mu kan no!
+        </p>
+
+        <p>
+          Awurade hyɛɛ me bɔ pa,<br />
+          Ne nsɛm na m'ankasa anidaso so da hɔ;<br />
+          Ɔbɛyɛ me kyɛm ne me kyɛfa<br />
+          Ɛkɔsi sɛ nkwa to ntwa me so.
+        </p>
+
+        <p>
+          Sɛ yɛwɔ hɔ mfe du mpem,<br />
+          A yɛhyerɛn te sɛ owia,<br />
+          Yɛn nna nnwɔtwe nso mfi yɛn nsa so sɛ yɛbɛto Onyankopɔn ayeyi<br />
+          Sɛnea ɛyɛe bere a yɛde yɛn ho hyɛɛ ase no.
         </p>
       </div>
     </div>
