getting better font styling and background colors

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="top-nav">
       <div class="search-bar">
-        <input type="text" placeholder="Search hymn..." />
+        <input type="search" id="search-input" placeholder="Search hymn..." />
       </div>
 
       <div class="checkbox-item">
@@ -32,69 +32,13 @@
         </label>
       </div>
     </div>
-    <div class="container">
+    <div class="container cross-pattern">
       <div class="left-panel">
         <h2>English</h2>
-        <p>
-          Amazing grace! how sweet the sound,<br />
-          That saved a wretch; like me!<br />
-          I once was lost, but now am found,<br />
-          Was blind, but now I see.
-        </p>
-
-        <p>
-          ’Twas grace that taught my heart to fear,<br />
-          And grace my fears relieved;<br />
-          How precious did that grace appear<br />
-          The hour I first believed!
-        </p>
-
-        <p>
-          The Lord hath promised good to me,<br />
-          His word my hope secures;<br />
-          He will my shield and portion be<br />
-          As long as life endures.
-        </p>
-
-        <p>
-          When we’ve been there ten thousand years,<br />
-          Bright shining as the sun,<br />
-          We’ve no less days to sing God’s praise<br />
-          Than when we first begun.
-        </p>
       </div>
-
-      <div class="divider"></div>
 
       <div class="right-panel">
         <h2>Twi</h2>
-        <p>
-          Adom anwonwade! ɛte sɛn nneɛma no,<br />
-          A gyee ɔbɔnefo; te sɛ me!<br />
-          Me yerae dada, nanso seesei wɔahu me,<br />
-          Na mennhu, nanso seesei mahu.
-        </p>
-
-        <p>
-          Na adom na kyerɛɛ me koma sɛ mennsuro,<br />
-          Na adom nso yi me suro kɔe;<br />
-          Ɛyɛɛ anika sɛnea saa adom no baa<br />
-          Bere a megyinaa gyidi mu kan no!
-        </p>
-
-        <p>
-          Awurade hyɛɛ me bɔ pa,<br />
-          Ne nsɛm na m'ankasa anidaso so da hɔ;<br />
-          Ɔbɛyɛ me kyɛm ne me kyɛfa<br />
-          Ɛkɔsi sɛ nkwa to ntwa me so.
-        </p>
-
-        <p>
-          Sɛ yɛwɔ hɔ mfe du mpem,<br />
-          A yɛhyerɛn te sɛ owia,<br />
-          Yɛn nna nnwɔtwe nso mfi yɛn nsa so sɛ yɛbɛto Onyankopɔn ayeyi<br />
-          Sɛnea ɛyɛe bere a yɛde yɛn ho hyɛɛ ase no.
-        </p>
       </div>
     </div>
     <div class="font-buttons">
