--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     </div>
 
     <!-- You can also require other files to run in this process -->
-    <script src="./js/renderer.js"></script>
+    <script type="module" src="./js/renderer.js"></script>
   </body>
 </html>
