better error ux in for not found hymns

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="top-nav">
       <div class="search-bar">
         <input type="search" id="search-input" placeholder="Search hymn..." />
+        <div id="error-message" class="error-hidden"></div>
       </div>
 
       <div class="checkbox-item">
