moved onto the hymn header display, it works, will move onto the body of the hymn itself

--- a/index.html
+++ b/index.html
@@ -49,49 +49,27 @@
           <button class="action-btn primary">📊 Stats</button>
         </div>
       </header>
-          <div class="container cross-pattern">
-      <div class="left-panel">
-        <h2>English</h2>
+      <div class="hymn-display">
+        <div class="hymn-header">
+          <div class="hymn-number-badge">#147</div>
+          <h1 class="hymn-title-main">Amazing Grace</h1>
+          <p class="hymn-subtitle">Adom Nwanwa</p>
+        </div>
       </div>
+      <div class="container cross-pattern">
+        <div class="left-panel">
+          <h2>English</h2>
+        </div>
 
-      <div class="right-panel">
-        <h2>Twi</h2>
+        <div class="right-panel">
+          <h2>Twi</h2>
+        </div>
+      </div>
+      <div class="font-buttons">
+        <button class="incr-btn">A+</button>
+        <button class="decr-btn">A-</button>
       </div>
     </div>
-    <div class="font-buttons">
-      <button class="incr-btn">A+</button>
-      <button class="decr-btn">A-</button>
-    </div>
-    </div>
-    <!-- <div class="top-nav">
-      <div class="search-bar">
-        <input type="search" id="search-input" placeholder="Search hymn..." />
-        <div id="error-message" class="error-hidden"></div>
-      </div>
-
-      <div class="checkbox-item">
-        <label class="custom-checkbox checkbox-slide">
-          <input type="checkbox" />
-          <span class="slidemark"></span>
-          <span class="label-text">Dual Mode</span>
-        </label>
-      </div>
-    </div> -->
-
-    <div class="container cross-pattern">
-      <div class="left-panel">
-        <h2>English</h2>
-      </div>
-
-      <div class="right-panel">
-        <h2>Twi</h2>
-      </div>
-    </div>
-    <div class="font-buttons">
-      <button class="incr-btn">A+</button>
-      <button class="decr-btn">A-</button>
-    </div>
-
     <!-- You can also require other files to run in this process -->
     <script type="module" src="./js/renderer.js"></script>
   </body>
