good progress, to get formatting we want, we need to add <br /> to match all hymns

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
               <span class="label-text">Dual Mode</span>
             </label>
           </div>
-          <button class="action-btn" aria-label="Toggle night mode">🌙</button>
+          <!-- <button class="action-btn" aria-label="Toggle night mode">🌙</button>
           <button class="action-btn" aria-label="Settings">⚙️</button>
-          <button class="action-btn primary">📊 Stats</button>
+          <button class="action-btn primary">📊 Stats</button> -->
         </div>
       </header>
       <div class="hymn-display">
