will stick with this ui view

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <div class="app-container">
       <header class="header">
         <div class="logo">
-          <div class="logo-icon">♪</div>
           <span>Hymnal</span>
         </div>
         <div class="search-container">
@@ -56,7 +55,7 @@
           <p class="hymn-subtitle">Adom Nwanwa</p>
         </div>
       </div>
-      <div class="container cross-pattern">
+      <div class="container">
         <div class="left-panel">
           <h2>English</h2>
         </div>
