--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -56,13 +56,9 @@
         </div>
       </div>
       <div class="container">
-        <div class="left-panel">
-          <h2>English</h2>
-        </div>
+        <div class="left-panel"></div>
 
-        <div class="right-panel">
-          <h2>Twi</h2>
-        </div>
+        <div class="right-panel"></div>
       </div>
       <div class="font-buttons">
         <button class="incr-btn">A+</button>
